--- a/ceppp_suite_crm/views/menu.xml
+++ b/ceppp_suite_crm/views/menu.xml
@@ -16,10 +16,18 @@
     <!--Child menu-->
 
     <menuitem
+        id="suite_crm_chapitre_maladie"
+        name="Suite crm chapitre maladie"
+        action="ceppp_suite_crm_chapitre_maladie_suite_crm_chapitre_maladie_action_window"
+        sequence="1"
+        parent="menu"
+    />
+
+    <menuitem
         id="suite_crm_commentaires_recruteur"
         name="Suite crm commentaires recruteur"
         action="ceppp_suite_crm_commentaires_recruteur_suite_crm_commentaires_recruteur_action_window"
-        sequence="1"
+        sequence="2"
         parent="menu"
     />
 
@@ -27,7 +35,7 @@
         id="suite_crm_entrevues"
         name="Suite crm entrevues"
         action="ceppp_suite_crm_entrevues_suite_crm_entrevues_action_window"
-        sequence="2"
+        sequence="3"
         parent="menu"
     />
 
@@ -35,7 +43,7 @@
         id="suite_crm_exp_patient_partenaire"
         name="Suite crm exp patient partenaire"
         action="ceppp_suite_crm_exp_patient_partenaire_suite_crm_exp_patient_partenaire_action_window"
-        sequence="3"
+        sequence="4"
         parent="menu"
     />
 
@@ -43,7 +51,7 @@
         id="suite_crm_formation"
         name="Suite crm formation"
         action="ceppp_suite_crm_formation_suite_crm_formation_action_window"
-        sequence="4"
+        sequence="5"
         parent="menu"
     />
 
@@ -51,7 +59,15 @@
         id="suite_crm_hopital"
         name="Suite crm hopital"
         action="ceppp_suite_crm_hopital_suite_crm_hopital_action_window"
-        sequence="5"
+        sequence="6"
+        parent="menu"
+    />
+
+    <menuitem
+        id="suite_crm_maladie"
+        name="Suite crm maladie"
+        action="ceppp_suite_crm_maladie_suite_crm_maladie_action_window"
+        sequence="7"
         parent="menu"
     />
 
@@ -59,7 +75,7 @@
         id="suite_crm_partenariats"
         name="Suite crm partenariats"
         action="ceppp_suite_crm_partenariats_suite_crm_partenariats_action_window"
-        sequence="6"
+        sequence="8"
         parent="menu"
     />
 
@@ -67,7 +83,7 @@
         id="suite_crm_patients"
         name="Suite crm patients"
         action="ceppp_suite_crm_patients_suite_crm_patients_action_window"
-        sequence="7"
+        sequence="9"
         parent="menu"
     />
 
@@ -75,7 +91,7 @@
         id="suite_crm_perspective_patient"
         name="Suite crm perspective patient"
         action="ceppp_suite_crm_perspective_patient_suite_crm_perspective_patient_action_window"
-        sequence="8"
+        sequence="10"
         parent="menu"
     />
 
@@ -83,7 +99,7 @@
         id="suite_crm_region_admin"
         name="Suite crm region admin"
         action="ceppp_suite_crm_region_admin_suite_crm_region_admin_action_window"
-        sequence="9"
+        sequence="11"
         parent="menu"
     />
 </odoo>
