[ADD] cepp_partient_partenaire: affiliation with more recruteur demo data - add 2 societies affilation

--- a/ceppp_patient_partenaire/views/res_partner_views.xml
+++ b/ceppp_patient_partenaire/views/res_partner_views.xml
@@ -11,6 +11,7 @@
                     <separator/>
                     <filter string="Patients" name="patient" domain="[('patient','=',True)]"/>
                     <filter string="Recruteurs" name="recruteur" domain="[('recruteur','=',True)]"/>
+                    <filter string="Affiliations" name="affiliation" domain="[('affiliation','=',True)]"/>
                 </xpath>
             </field>
         </record>
