[UPD] ceppp_patient_partenaire: anonymise patient information

--- a/ceppp_patient_partenaire/views/ceppp_patient.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient.xml
@@ -8,7 +8,9 @@
             <form string="Titre">
                 <sheet>
                     <group>
-                        <field name="name" />
+                        <field name="name"/>
+                        <field name="uuid" readonly="1" attrs="{'invisible':[('uuid','=',False)]}"/>
+                        <field name="partner_id"/>
                     </group>
                 </sheet>
             </form>
@@ -20,7 +22,7 @@
         <field name="model">ceppp.patient</field>
         <field name="arch" type="xml">
             <graph string="Ceppp patient">
-                <field name="name" type="row" />
+                <field name="uuid" type="row"/>
             </graph>
         </field>
     </record>
@@ -30,7 +32,7 @@
         <field name="model">ceppp.patient</field>
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
-                <field name="name" />
+                <field name="uuid"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
@@ -38,7 +40,7 @@
                                 <ul>
                                     <li class="mb4">
                                         <strong>
-                                            <field name="name" />
+                                            <field name="uuid"/>
                                         </strong>
                                     </li>
                                 </ul>
@@ -55,7 +57,7 @@
         <field name="model">ceppp.patient</field>
         <field name="arch" type="xml">
             <pivot string="Ceppp patient">
-                <field name="name" type="row" />
+                <field name="uuid" type="row"/>
             </pivot>
         </field>
     </record>
@@ -65,7 +67,7 @@
         <field name="model">ceppp.patient</field>
         <field name="arch" type="xml">
             <search string="Ceppp patient">
-                <filter domain="[('name','!=',False)]" name="name" string="Name" />
+                <filter domain="[('uuid','!=',False)]" name="uuid" string="Code"/>
             </search>
         </field>
     </record>
@@ -75,16 +77,16 @@
         <field name="model">ceppp.patient</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name" />
+                <field name="uuid"/>
             </tree>
         </field>
     </record>
 
     <act_window
-        id="ceppp_patient_patient_action_window"
-        name="Patient"
-        res_model="ceppp.patient"
-        view_mode="kanban,tree,pivot,graph,form"
+            id="ceppp_patient_patient_action_window"
+            name="Patient"
+            res_model="ceppp.patient"
+            view_mode="kanban,tree,pivot,graph,form"
     />
 
 </odoo>
