--- a/ceppp_patient_partenaire/views/menu.xml
+++ b/ceppp_patient_partenaire/views/menu.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-  <!--Root menu-->
+    <!--Root menu-->
 
-  <menuitem
-        id="ceppp_patient_partenaire"
-        name="Ceppp Patient Partenaire"
-        sequence="20"
-        web_icon="ceppp_patient_partenaire,static/description/icon.png"
+    <menuitem
+            id="ceppp_patient_partenaire"
+            name="Ceppp Patient Partenaire"
+            sequence="20"
+            web_icon="ceppp_patient_partenaire,static/description/icon.png"
     />
 
-  <!--Sub menu-->
+    <!--Sub menu-->
 
-  <menuitem id="menu" name="Menu" sequence="1" parent="ceppp_patient_partenaire" />
+    <menuitem id="menu" name="Menu" sequence="1" parent="ceppp_patient_partenaire"/>
 
-  <!--Child menu-->
+    <!--Child menu-->
 
-  <menuitem id="patient" name="Patient" action="ceppp_patient_patient_action_window" sequence="1" parent="menu" />
+    <menuitem id="patient" name="Patient" action="ceppp_patient_patient_action_window" sequence="1" parent="menu"/>
+
+    <record model="ir.ui.menu" id="contacts.menu_contacts">
+        <!-- Replace all group in contacts.menu_contacts -->
+        <field name="groups_id"
+               eval="[(6,0,[ref('base.group_partner_manager'), ref('group_ceppp_patient_partenaire_manager')])]"/>
+    </record>
 
 </odoo>
